--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-avatar": "^4.0.0",
+    "ngx-toastr": "^10.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
